# cmpsci677-lab1

./: .gitignore  Makefile  README.md  cmpsci677-lab1.cabal  gen-doc.ps1  gen-doc.sh  run-all.sh  run-test-case.sh  test-output-cached.txt
src/: .Communication.lhs.swp  .Controllers.lhs.swp  .DesignDocument.md.swp  .Devices.lhs.swp  .Gateway.lhs.swp  Communication.lhs  Controllers.lhs  DesignDocument.md  Devices.lhs  Gateway.lhs  Main.lhs  Protocol.lhs  User.lhs
