name:                cmpsci677-lab1
version:             0.1.91.0
synopsis:            Operating Systems Programming Assignment #1: Internet of Things and Smart Homes
-- description:         
author:              Adam R. Nelson
maintainer:          arnelson@cs.umass.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cmpsci677-lab1
  main-is:             Main.lhs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, containers, network, stm, random
  hs-source-dirs:      src
  default-language:    Haskell2010
